use case banner issue solved

--- a/front-end/Assets/src/css/orion/_orion-banners.scss
+++ b/front-end/Assets/src/css/orion/_orion-banners.scss
@@ -181,7 +181,7 @@
     &.use-cases-banner{
         overflow: visible;
         .orion-banner-content {
-            padding: 10px 0 30px 0;
+            padding: 40px 0 30px 0;
             @media (min-width: $break-sm) {
                 padding: 100px 0 30px 0;        
             }
@@ -194,8 +194,8 @@
             .orion-banner-right-image{
                 img{
                     max-height: 192px;
-                    @media (min-width: $break-sm) {  
-                        max-height: initial;          
+                    @media (min-width: $break-md) {  
+                        max-height: 240px;          
                     }
                 }
             }
@@ -207,7 +207,8 @@
             }
             @media (min-width: $break-lg) {
                 top: -10px;   
-                right: -15%;            
+                right: -15%;     
+                min-height: 320px;       
             }
             @media (min-width: 1600px) {  
                 right: -5%;            
@@ -220,7 +221,7 @@
                 background-position: 75% -70px;
                 @media (min-width: $break-sm) {  
                     background-size: auto;
-                    background-position: 100% 135%;
+                    background-position: 10% 135%;
                 }
                 
                 @media (min-width: $break-lg) {      
@@ -234,6 +235,7 @@
                 background-size: 650px;
                 @media (min-width: $break-sm) {  
                     background-size: auto;
+                    background-position: 10% 135%;
                 }
                 @media (min-width: $break-lg) {  
                     animation-name: bounce-blob-masked-anchor;    
