--- a/front-end/Assets/src/css/orion/_orion-global.scss
+++ b/front-end/Assets/src/css/orion/_orion-global.scss
@@ -879,19 +879,43 @@
 	        left: 90%;
 	        transform: translateX(-13%);
 	        &:after{
+                margin-left: -7px;
 	            left: 10%;  
 	        } 
 	    }
 	}
 	
 	&.tooltip_pointer_right {
-		    &:hover .Tooltip-window{
-		        left: 10%;
-		        transform: translateX(-87%);
-		        &:after{
-		            left: 90%;  
-		        } 
-		    }
-	}   
+        &:hover .Tooltip-window{
+            left: 10%;
+            transform: translateX(-87%);
+            &:after{
+                margin-left: -14px;
+                left: 90%;  
+            } 
+        }
+    }
+    &.tooltip_pointer_bottom{
+	    &:hover .Tooltip-window{
+            bottom:auto;            
+	        top: 30px;
+	        &:after{
+                transform: rotate(180deg);
+                top: -20px;
+                border-width: 10px;
+                border-style: solid;
+                border-color: #414042 transparent transparent transparent;
+                  
+	        } 
+	    }
+    }
+   /* &.tooltip_pointer_top{
+	    &:hover .Tooltip-window{            
+	        bottom: 30px;
+	        &:after{
+	            top: 100%;  
+	        } 
+	    }
+	}  */ 
 }
 
