--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -315,14 +315,14 @@
 			color: #1A98FF;
 			font-size: 16px;
 			font-weight: 700;
-			padding: 10px;
+			padding-top: 10px;
 			display: inline-block;
 			cursor: pointer;
 		}
 		
 		.cancel-save-btn  {
 			span{
-				padding: 10px;
+				padding-top: 10px;
 				display: inline-block;
 				font-size: 16px;
 				font-weight: 700;
