Pricing cards component created

--- a/front-end/Assets/src/css/modules/_utility.scss
+++ b/front-end/Assets/src/css/modules/_utility.scss
@@ -211,6 +211,10 @@ a.white:focus,
 .bg-black {
     background-color: #000;
 }
+.bg-lightGrey {
+    background-color: color(greyLight);
+}
+
 
 // Blues
 .bg-cerulean {
