--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -10,15 +10,22 @@
 					width: auto;
 				} 
 				h4{
-					padding: 35px 0;
+					padding: 16px 0;
 					color: #75777A;
+					@media(min-width:$break-sm){
+							padding: 35px 0;
+					} 
 					span.stepNo {
 						background: #E5E5E5;
 						display: inline-block;
-						padding: 10px;
+						padding: 5px;
 						line-height: 1em;
 						vertical-align: middle;
-						margin-right: 15px;
+						margin-right: 5px;
+						@media(min-width:$break-sm){
+							padding: 10px;
+							margin-right:15px;
+						} 
 					}
 					&:hover {
 							cursor: pointer;
