--- a/front-end/Assets/src/css/orion/_orion-banners.scss
+++ b/front-end/Assets/src/css/orion/_orion-banners.scss
@@ -99,7 +99,7 @@
 				a {
 					font-size: 16px;
 					font-weight: 700;
-					padding-right: 45px;
+					margin-right: 45px;
 				}
 			}
         }
