--- a/front-end/Assets/src/css/orion/_orion-pricing.scss
+++ b/front-end/Assets/src/css/orion/_orion-pricing.scss
@@ -60,7 +60,10 @@
     .pricing-footer{
         p  {
             margin-left: 20px;
-        }        
+        }  
+        img{
+            min-width: 64px;
+        }      
     }
     hr {
         border: none;
