--- a/front-end/Assets/src/css/orion/_orion-portal-cards.scss
+++ b/front-end/Assets/src/css/orion/_orion-portal-cards.scss
@@ -7,6 +7,7 @@
     margin: 12px;
     width: 100%;
     transition: color 0.3s linear;
+    cursor: pointer;
     @media(min-width:$break-sm){
         border: 1px solid transparent;
     }
@@ -53,6 +54,9 @@
         @media(min-width:$break-sm){
             padding: 5px;
         }
+    }
+    .brand-name{
+        margin: auto;
     }
     &.portal-cards-text{
         border: 1px solid #BDBDBD;
