--- a/front-end/Assets/src/css/orion/_orion-global.scss
+++ b/front-end/Assets/src/css/orion/_orion-global.scss
@@ -180,13 +180,20 @@
     h3{
         color: #002C8F;
         font-weight:700;
+        font-size:22px;
+        @media(min-width:$break-md){
+			font-size: 26px;
+		}
     }
     .big-price-text{
         color: #414042;
         font-weight: 700;
-        font-size: 36px;
+        font-size: 26px;
         margin-top: 10px;
         margin-bottom: 20px;
+        @media(min-width:$break-md){
+			font-size: 36px;
+		}
     }
 }
 .anchor-banner-wrap{
