--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -102,7 +102,43 @@
 						}
 						
 					}
-					#nonProdItemsWrap, #reviewItemsWrap {
+					#nonProdItemsWrap {
+						.nonProdItem, .prodItem{
+							border: 1px solid #1A98FF;
+							border-radius: 10px;
+							padding: 30px;
+							margin-bottom: 30px;
+							position:relative;
+							
+							.delete{
+								margin-top: 30px;
+								cursor: pointer;
+								color: #75777A;
+								font-family: Arial, sans-serif;
+								font-size: 16px;
+								font-weight: 800;
+								&:hover{
+									color: #F98700;									
+								}
+							}
+							
+							h3{
+								font-size: 22px;
+								font-weight: 700;
+								border-bottom: 1px solid #BDBDBD;
+								margin-bottom: 25px;
+								padding-bottom: 10px;
+							}
+							.cale-subTitle {
+								font-size: 18px;
+								font-weight: 700;
+								margin-bottom: 0;
+								color: #414042;
+							}
+						}
+						
+					}
+					#reviewItemsWrap {
 						.nonProdItem, .prodItem{
 							border: 1px solid #1A98FF;
 							border-radius: 10px;
@@ -139,6 +175,9 @@
 						}
 						
 					}
+					
+					
+					
 					.total{
 						background: #EEEEEE;
 						font-size: 14px;
