focus outline removed

--- a/front-end/Assets/src/css/orion/_orion-portal-cards.scss
+++ b/front-end/Assets/src/css/orion/_orion-portal-cards.scss
@@ -73,7 +73,10 @@
             }
         a{
             margin: auto;
-        }    
+        }   
+        &:focus{
+            outline: none;
+        } 
     }
     
 }
