--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcoveosearch/supportcoveosearch.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/structure/supportcoveosearch/supportcoveosearch.html
@@ -49,7 +49,7 @@
           <div class="CoveoTab" data-id="All" data-caption="All" data-expression="((NOT @syssource=documents OR @uri=/Products OR @uri=/952) NOT(@objecttype=KBAttachment) NOT @sysfiletype=YouTubePlaylistItem NOT @sysfiletype=YouTubePlaylist) NOT((@sfscfaqproceduralisvisibleinpkb==false AND @sfscfaqproceduralBMCPartnerUserC==true) OR (@sfscproductservicedescriptionisvisibleinpkb==false AND @sfscproductservicedescriptionBMCPartnerUserC==true) OR (@sfscsolutionstoaproductproblemisvisibleinpkb==false AND @sfscsolutionstoaproductproblemBMCPartnerUserC==true))"></div>
 <div class="CoveoTab" data-id="KB" data-caption="Knowledge Base" data-icon="bmc-knowledge" data-expression="@sfkbid (NOT @syssource=SFADEV2) (@sfisvisibleinpkb=true @sfsc_visibility_partner_only__c=false)"></div>
 <div class="CoveoTab" data-id="Confluence" data-caption="Documentation" data-icon="bmc-documentation" data-expression="(NOT @sysfiletype==CFComment OR NOT @sysisemptydocument)(@syssource=confluence OR (@syssource=documents AND (@uri=/Products OR @uri=/952 OR @uri=/ctrlm8/ OR @uri=/ctrlm9/) NOT @sysisemptydocument)) "></div>
-<div class="CoveoTab" data-id="Communities" data-caption="Communities" data-icon="bmc-community" data-expression="@syssource=communities"></div>
+<!-- <div class="CoveoTab" data-id="Communities" data-caption="Communities" data-icon="bmc-community" data-expression="@syssource=communities"></div> -->
 <div class="CoveoTab" data-id="bmccom" data-icon="bmc-mainlogo" data-caption="Support Central" data-expression="@syssource=Support @syssource=web"></div> 
 <div class="CoveoTab" data-id="bmc-yt-video" data-icon="bmc-yt-video"  data-caption="Video" data-expression="@syssource=Video-bmc-docs @sysfiletype=YouTubeVideo"></div>  
       </div>
