--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -72,7 +72,7 @@
 					left: 0;
 					bottom:  0;
 					text-align: center;
-					z-index: 1000;
+					z-index: 10;
 				}	
 			} 
 			
@@ -100,7 +100,10 @@
 					}
 					h3{
 						color: #002C8F;
-						font-size: 36px;
+						font-size:22px;
+						@media(min-width:$break-sm){
+							font-size: 36px;
+						} 
 					}
 					.big-price-text {
 						color: #414042;
@@ -128,9 +131,13 @@
 						.nonProdItem, .prodItem{
 							border: 1px solid #1A98FF;
 							border-radius: 10px;
-							padding: 30px;
-							margin-bottom: 30px;
+							padding: 20px;
+							margin-bottom: 20px;
 							position:relative;
+							@media(min-width:$break-sm){
+								padding: 30px;
+								margin-bottom: 30px;
+							} 
 							
 							.delete{
 								margin-top: 30px;
@@ -145,17 +152,23 @@
 							}
 							
 							h3{
-								font-size: 22px;
+								font-size: 20px;
 								font-weight: 700;
 								border-bottom: 1px solid #BDBDBD;
 								margin-bottom: 25px;
 								padding-bottom: 10px;
+								@media(min-width:$break-sm){
+									font-size:22px;
+								} 
 							}
 							.cale-subTitle {
-								font-size: 18px;
+								font-size: 16px;
 								font-weight: 700;
 								margin-bottom: 0;
 								color: #414042;
+								@media(min-width:$break-sm){
+									font-size:18px;
+								} 
 							}
 						}
 						
@@ -187,6 +200,10 @@
 							text-align: right;
 							border-left: 1px solid #BDBDBD;						
 							margin: 10px;
+							@media(max-width:$break-sm){
+								margin-left: 0;
+								padding-left: 10px;
+							} 
 						}
 						
 					}
@@ -203,6 +220,9 @@
 							margin: 15px auto 0 auto;
 							@media(min-width:$break-md){
 								margin: 0 0 0 auto;
+							}
+							@media(max-width:$break-sm){
+								text-align: center;
 							} 
 						}
 					}
@@ -218,6 +238,9 @@
 				p {
 					font-size: 16px;
 					line-height: 1.5em;
+					a{
+						border-bottom: 1px solid #F98700;
+					}
 				}
 				#tallybox {
 					padding: 30px;
@@ -344,6 +367,7 @@
 			border-color: #002C8F;
 			color: #fff;
 			border: none;
+			border-radius: 5px;
 			&:before{
 				content: url(#{$imagesFolder}orion/plus-orion.png);
 				vertical-align: middle;
