Tooltip table added

--- a/front-end/Assets/src/css/orion/_orion-global.scss
+++ b/front-end/Assets/src/css/orion/_orion-global.scss
@@ -999,5 +999,29 @@
 	        } 
 	    }
 	}  */ 
+
+    .tooltip_table{
+        border-collapse: collapse;
+        color:#fff;
+        font-size:14px;
+        padding: 10px;
+        background:none;
+        text-align:left;
+        th,td{
+            border-collapse: collapse;
+            color:#fff;
+            font-size:14px;
+            padding: 10px;
+            background:none;
+            text-align:left;
+        }
+        th{
+            border-bottom: 1px solid #1A98FF;                            
+            font-weight:700;
+        }
+        td{
+            border-bottom: 1px solid #75777A;
+        }
+    }
 }
 
