Calculator content added

--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -241,6 +241,8 @@
 						p{
 							font-size: 14px;
 							margin: 15px auto 0 auto;
+							color: #1A98FF;
+							line-height: 18px;
 							@media(min-width:$break-md){
 								margin: 0 0 0 auto;
 							}
