Fixed Font issue

--- a/front-end/Assets/src/css/orion/_orion-calculator.scss
+++ b/front-end/Assets/src/css/orion/_orion-calculator.scss
@@ -173,11 +173,11 @@
 								margin-top: 30px;
 								cursor: pointer;
 								color: #75777A;
-								font-family: Arial, sans-serif;
+								//font-family: Arial, sans-serif;
 								font-size: 16px;
 								font-weight: 700;
 								&:hover{
-									color: #F98700;									
+									//color: #F98700;									
 								}
 							}
 							
@@ -264,7 +264,7 @@
 					font-size: 16px;
 					line-height: 1.5em;
 					a{
-						border-bottom: 1px solid #F98700;
+						//border-bottom: 1px solid #F98700;
 					}
 				}
 				#tallybox {
